--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>NutriTrack - Dashboard</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <header>
@@ -59,6 +59,17 @@
                         placeholder="Waist in inches"
                         required
                     />
+                </div>
+                <div class="form-row">
+                   <label for="hip">Hip Measurement (inches):</label>
+                   <input
+                       type="number"
+                       step="0.1"
+                       name="waist"
+                       id="hip"
+                       placeholder="Hip in inches"
+                       required
+                   />
                 </div>
 
                 <div class="form-row">
