--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -65,7 +65,7 @@
                    <input
                        type="number"
                        step="0.1"
-                       name="waist"
+                       name="hip"
                        id="hip"
                        placeholder="Hip in inches"
                        required
