--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,10 @@
 
     <section class = "welcome">
         <h2>Welcome to your Nutrition Tracker!</h2>
-        <p> Select an option from the menu above to get started. </p>
+        <a href ="{{ url_for('dashboard') }}">
+            <img src="{{ url_for('static', filename='picture/scale.png') }}" alt="Go to Dashboard" class="dashboard-image-button">
+        </a>
+        <p> Step on the Scale! </p>
     </section>
 
     <footer>
