--- a/styles.css
+++ b/styles.css
@@ -154,3 +154,18 @@ footer p {
     font-size: 1rem;
     box-sizing: border-box;
 }
+
+/* image css */
+.dashboard-image-button {
+    width: 200px; /* adjust size as needed */
+    height: auto;
+    margin-top: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    transition: transform 0.2s;
+}
+
+.dashboard-image-button:hover {
+    transform: scale(1.05);
+}
