--- a/static/styles.css
+++ b/static/styles.css
@@ -102,6 +102,7 @@ form button:hover {
     background-color: #4b8526;
     border: solid 10px #4b8526;
     border-radius: 20px;
+    margin-bottom: 10px;
 }
 @media (min-width: 768px) {
     form label, form input, form select, form button {
