--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a class="selector" href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                <li><a class="selector" href="{{ url_for('dashboard') }}">Dashboard</a></li>
 
             </ul>
         </nav>
