--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -11,7 +11,7 @@
         <h1>NutriTrack</h1>
         <nav>
             <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
+                <li><a class="selector" href="{{ url_for('index') }}">Home</a></li>
                 <!-- Advice removed from nav -->
             </ul>
         </nav>
