--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,6 +12,7 @@
         <nav>
             <ul>
                 <li><a class="selector" href="{{ url_for('index') }}">Home</a></li>
+                <li><a class="selector" href="{{ url_for('advice') }}">Advice</a></li>
                 <!-- Advice removed from nav -->
             </ul>
         </nav>
