--- a/templates/advice.html
+++ b/templates/advice.html
@@ -19,7 +19,7 @@
 
     <section class="advice-section">
         {% if advice_type == "weight" %}
-            <h2>Weight Advice</h2>
+            <h2>BMI Stats</h2>
             <ul>
                 {% for w in advice %}
                     <li>{{ w }}</li>
